syntax = "proto3";
package order ;

option go_package = "/order_service";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (BaseResponse);
  rpc QueryOrderById(QueryOrderByIdRequest) returns (QueryOrderResponse);
  rpc QueryOrdersByUserId(QueryOrdersByUserIdRequest)
      returns (QueryOrdersResponse);
  rpc UpdateOrder(UpdateOrderRequest) returns (BaseResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (BaseResponse);
  rpc UpdateOrderAddresseeInfo(UpdateOrderAddresseeInfoRequest)
      returns (BaseResponse);
}

message CreateOrderRequest {
  int64 user_id = 1;
  int64 goods_id = 2;
  int32 goods_count = 3;
  int32 cost = 4;
  AddresseeInfo addressee_info = 5;
}

message QueryOrderByIdRequest {
  int64 order_id = 1;
}

message QueryOrderResponse {
  OrderResponse order_response = 1;
}

message QueryOrdersByUserIdRequest {
  int64 user_id = 1;
  int32 page_num = 2;
  int32 page_size = 3;
}

message QueryOrdersResponse {
  repeated OrderResponse order_responses = 1;
}

message OrderResponse {
  int64 order_id = 1;
  int64 user_id = 2;
  int64 goods_id = 3;
  int32 status = 4;
  int64 create_time = 5;
  int32 goods_count = 7;
  int32 cost = 8;
  AddresseeInfo addressee_info = 6;
}

message UpdateOrderRequest {
  int64 order_id = 1;
  int32 status = 2;
  int32 goods_count = 3;
  int32 cost = 4;
  AddresseeInfo addressee_info = 5;
}

message UpdateOrderStatusRequest {
  int64 order_id = 1;
  int32 status = 2;
}

message UpdateOrderAddresseeInfoRequest {
  int64 order_id = 1;
  AddresseeInfo addressee_info = 2;
}

message AddresseeInfo {
  string name = 1;
  string phone = 2;
  string address = 3;
}

message BaseResponse {
  int32 code = 1;
  string msg = 2;
}